--- a/views/register2.jade
+++ b/views/register2.jade
@@ -9,5 +9,8 @@ block content
     div.input
         span.label Password
         input(type="text", name="password")
+    div.input
+            span.label Password
+            input(type="hidden", name="_csrf")
     div.actions
         input(type="submit", value="sign up")
